# patitas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.cursor/plans/: examples-directory.plan.md
.dori/local/logs/: 2026-02-06.jsonl
.github/workflows/: pages.yml  python-publish.yml  tests.yml  ty.yml
benchmarks/: AGENTS.md  README.md  __init__.py  benchmark_by_section.py  benchmark_corpus.py  benchmark_directives.py  benchmark_excerpt.py  benchmark_incremental.py  benchmark_parallel.py  benchmark_phase_breakdown.py  benchmark_pipelines.py  benchmark_scaling.py  benchmark_vs_mistune.py  check_memory.py  check_scaling.py  check_thresholds.py  conftest.py  contextvar_config.py  experiment_bengal_optimizations.py  experiment_jit.py  line_profile.py  memory_bench.py  profile_large_doc.py  profile_parse.py  report_results.py
benchmarks/fixtures/real_world/: changelog.md  guide.md  readme.md
docs/: AGENTS.md  gfm-compliance.md  linting.md  migrate-from-markdown-it.md  migrate-from-mistune.md  performance-investigation.md  public-api.md  security.md
examples/: AGENTS.md  README.md
examples/advanced/: parallel_parse.py  serialize_ast.py
examples/ast/: transform_headings.py  typed_ast_walk.py
examples/basic/: hello_markdown.py  markdown_class.py
examples/differ/: ast_diff.py
examples/directives/: builtin_directives.py  custom_directive.py
examples/incremental/: edit_simulation.py
examples/linting/: lint_markdown.py
examples/llm_safety/: llm_safe_context.py
examples/notebooks/: parse_notebook.py  sample-notebook.ipynb
examples/plugins/: math_and_tables.py
plan/: AGENTS.md  patitas-bengal-performance-optimization.md  rfc-contextvar-config.md  rfc-free-threading-patterns.md  rfc-performance-optimization.md  rfc-type-checking-hardening.md  site-plan.md
scripts/: extract_patitas.py
site/: AGENTS.md
site/config/_default/: autodoc.yaml  build.yaml  content.yaml  external_refs.yaml  fonts.yaml  menu.yaml  outputs.yaml  params.yaml  search.yaml  site.yaml  theme.yaml
site/config/environments/: production.yaml
site/content/: _index.md
site/content/docs/: _index.md
site/content/docs/about/: _index.md  architecture.md  comparison.md  ecosystem.md  performance.md  thread-safety.md
site/content/docs/directives/: _index.md  admonition.md  container.md  dropdown.md  tabs.md
site/content/docs/extending/: _index.md  ast-processing.md  custom-directives.md  diffing.md  llm-safety.md  plugins.md  serialization.md
site/content/docs/get-started/: _index.md  examples.md  installation.md  quickstart.md
site/content/docs/reference/: _index.md  api.md  nodes.md
site/content/docs/syntax/: _index.md  blocks.md  code.md  inline.md  links.md
site/content/docs/troubleshooting/: _index.md
site/content/releases/: 0.1.0.md  0.2.0.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md  0.4.0.md  _index.md
src/patitas/: AGENTS.md  __init__.py  cache.py  config.py  context.py  differ.py  errors.py  excerpt.py  frontmatter.py  highlighting.py  icons.py  incremental.py  location.py  nodes.py  notebook.py  parser.py  profiling.py  protocols.py  sanitize.py  serialization.py  stringbuilder.py  text.py  tokens.py  visitor.py
src/patitas/directives/: AGENTS.md  __init__.py  contracts.py  decorator.py  options.py  protocol.py  registry.py
src/patitas/directives/builtins/: __init__.py  admonition.py  container.py  dropdown.py  tabs.py
src/patitas/lexer/: AGENTS.md  __init__.py  core.py  modes.py
src/patitas/lexer/classifiers/: __init__.py  directive.py  fence.py  footnote.py  heading.py  html.py  link_ref.py  list.py  protocols.py  quote.py  thematic.py
src/patitas/lexer/scanners/: __init__.py  block.py  directive.py  fence.py  html.py
src/patitas/linting/: __init__.py  context.py  diagnostic.py  protocol.py  registry.py  rules.py  runner.py
src/patitas/parsing/: AGENTS.md  __init__.py  charsets.py  compiled_dispatch.py  containers.py  dispatch.py  pattern_parsers.py  protocols.py  shared_tokens.py  token_nav.py  ultra_fast.py
src/patitas/parsing/blocks/: __init__.py  core.py  directive.py  footnote.py  quote_fast_path.py  quote_token_reuse.py  table.py
src/patitas/parsing/blocks/list/: __init__.py  blank_line.py  fast_path.py  indent.py  item_blocks.py  marker.py  mixin.py  nested.py  trace.py  types.py
src/patitas/parsing/inline/: __init__.py  core.py  emphasis.py  gfm_autolinks.py  links.py  match_registry.py  special.py  tokens.py
src/patitas/plugins/: AGENTS.md  __init__.py  autolinks.py  footnotes.py  math.py  strikethrough.py  table.py  task_lists.py
src/patitas/renderers/: AGENTS.md  __init__.py  html.py  llm.py  protocol.py
src/patitas/roles/: AGENTS.md  __init__.py  protocol.py  registry.py
src/patitas/roles/builtins/: __init__.py  formatting.py  icons.py  math.py  reference.py
src/patitas/utils/: __init__.py  hashing.py  logger.py  text.py
tests/: AGENTS.md  __init__.py  conftest.py  test_adversarial_input.py  test_api.py  test_autolinks.py  test_ci_contract.py  test_commonmark_spec.py  test_config.py  test_config_consistency.py  test_config_from_dict.py  test_context.py  test_core_imports.py  test_coverage_list_fast_path.py  test_coverage_quote_token_reuse.py  test_differ.py  test_differential.py  test_directive_rendering.py  test_directive_tabs_coverage.py  test_directives.py  test_emphasis_edge_cases.py  test_error_paths.py  test_excerpt.py  test_footnote_coverage.py  test_frontmatter.py  test_gfm_spec.py  test_import.py  test_incremental.py  test_inline_tokens.py  test_linting.py  test_match_registry.py  test_notebook.py  test_parse_cache.py  test_parser_reinit.py  test_plugin_documentation.py  test_plugin_integration.py  test_plugin_properties.py  test_plugin_thread_safety.py  test_profiling.py  test_property_pipeline.py  (+13 more)
tests/fixtures/: GFM_SPEC_LICENSE.txt  gfm_spec_0_29.json
tests/lexer/: __init__.py  test_cross_mixin.py  test_invariants.py  test_lexer_state.py  test_location_tracking.py  test_unterminated_blocks.py
