[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patitas"
version = "0.1.1"
description = "Modern Markdown parser for Python 3.14t — CommonMark compliant, free-threading ready, 40-50% faster than mistune"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = [
    "markdown",
    "parser",
    "commonmark",
    "free-threading",
    "ast",
    "myst",
    "directives",
]
authors = [{ name = "Bengal Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [] # Pure Python, zero runtime dependencies

[project.optional-dependencies]
# Syntax highlighting for code blocks
syntax = ["rosettes>=0.1.0"]

# All optional features
all = ["rosettes>=0.1.0"]

[project.urls]
Homepage = "https://github.com/lbliii/patitas"
Documentation = "https://lbliii.github.io/patitas"
Repository = "https://github.com/lbliii/patitas"
Changelog = "https://github.com/lbliii/patitas/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
patitas = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "commonmark: CommonMark spec compliance tests",
    "property: property-based tests (may take longer)",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["dist/", "build/"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade - Python modernization
    "B",    # flake8-bugbear - common bugs
    "SIM",  # flake8-simplify - simplify code
    "I",    # isort - import sorting
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint - performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101"] # Allow assert in tests

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ty>=0.0.11",              # Astral type checker (Rust-based, 10-100x faster than mypy)
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.100.0",
]
docs = ["bengal>=0.1.8"]
