[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patitas"
version = "0.3.1"
description = "Modern Markdown parser for Python 3.14t — CommonMark compliant, free-threading ready, typed AST"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = [
    "markdown",
    "parser",
    "commonmark",
    "free-threading",
    "ast",
    "myst",
    "directives",
]
authors = [{ name = "Bengal Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [] # Pure Python, zero runtime dependencies

[project.optional-dependencies]
# Syntax highlighting for code blocks
syntax = ["rosettes>=0.1.0"]

# All optional features
all = ["rosettes>=0.1.0"]

[project.urls]
Homepage = "https://github.com/lbliii/patitas"
Documentation = "https://lbliii.github.io/patitas"
Repository = "https://github.com/lbliii/patitas"
Changelog = "https://github.com/lbliii/patitas/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
patitas = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "commonmark: CommonMark spec compliance tests",
    "property: property-based tests (may take longer)",
]

[tool.coverage.run]
source = ["src/patitas"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["dist/", "build/", "benchmarks/", "tests/", "examples/"]

[tool.ty.rules]
# Relax rules that produce too many false positives or are overly strict
# These are still checked but won't fail CI (warn instead of error)
unresolved-import = "warn"               # Third-party stubs often incomplete
unresolved-attribute = "warn"            # Dynamic attribute access patterns
invalid-argument-type = "warn"           # Gradual typing - allow flexibility
possibly-unresolved-reference = "ignore" # Too noisy with conditional imports

# Relax additional rules that are too strict for gradual typing
call-non-callable = "warn"       # False positives with Protocol/dynamic types
invalid-return-type = "warn"     # Gradual typing flexibility
invalid-assignment = "warn"      # Allows incremental typing improvements
invalid-type-arguments = "warn"  # Generics constraints too strict
not-subscriptable = "warn"       # Protocol objects missing __getitem__
invalid-method-override = "warn" # Liskov violations - review later
unused-ignore-comment = "warn"   # Flag stale type: ignore comments for cleanup

# Relax remaining rules to unblock CI - fix incrementally
unresolved-reference = "warn"          # Missing imports - fix these properly
unknown-argument = "warn"              # Wrong kwargs - needs investigation
missing-argument = "warn"              # Missing args - needs investigation
unsupported-operator = "warn"          # Type operations - review later
not-iterable = "warn"                  # Iteration issues
too-many-positional-arguments = "warn" # Signature mismatches
no-matching-overload = "warn"          # Overload issues

# Parser mixin patterns: mixins access attributes defined in sibling
# mixins or the host class. ty cannot resolve cross-mixin attribute access.
[[tool.ty.overrides]]
include = ["src/patitas/parsing/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade - Python modernization
    "B",    # flake8-bugbear - common bugs
    "SIM",  # flake8-simplify - simplify code
    "I",    # isort - import sorting
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint - performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101"] # Allow assert in tests

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "ty>=0.0.11",              # Astral type checker (Rust-based)
    "ruff>=0.15.1",  # 0.15.1+ fixes except-parenthesis bug (PEP 758 + as clause)
    "pre-commit>=4.0.0",
    "hypothesis>=6.100.0",
]
docs = ["bengal>=0.2.0"]
